Fixed banner not showing in work_index_page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -524,7 +524,7 @@ main,
         position: relative;
         top: -65%;
         max-width: 678px;
-        padding-left: rem-calc(8);
+        padding-left: rem-calc(24);
     }
 
     h1 {
